@@ -284,6 +284,7 @@ elif "clean" not in sys.argv:
 
 requirements = [
     'attrs>=17',
+    'certifi',
     'click>=4.0,<8',
     'cligj>=0.5',
     'click-plugins>=1.0',
